valid_tests/arrays/test1.go
// Test 1: Array declarations and access
func main() {
    var numbers []int
    values := []int{1, 2, 3, 4, 5}
    first := values[0]
    values[1] = 10
}
