invalid_tests/arrays/test1.go
// Test 1: Array access without index
func main() {
    arr := []int{1, 2, 3}
    x := arr[]
}
